# flux-watch

./: .gitignore  Makefile
core/: Cargo.toml
core/src/: lib.rs  outline.rs  test.rs
ui/: .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
ui/src/lib/: clock.svelte.ts
ui/src/routes/: +page.svelte  Clock.svelte  layout.css
